# meson-skeleton

./: meson.build  submodules.txt
src/: main.cpp
